# adventofcode

./: adventofcode.cabal  stack.yaml
src/Y2016/: D21.hs
src/Y2016/M12/: D21.hs
src/Y2017/: D01.hs  D02.hs  D03.hs  WarmUp.hs
src/Y2019/: D01.hs  D02.hs
test/: Spec.hs
test/Y2016/: D21Test.hs
test/Y2017/: D01Test.hs  D02Test.hs  D03Test.hs  WarmUpSpec.hs
test/Y2019/: D01Test.hs  D02Test.hs
