name:                adventofcode
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/adventofcode#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Y2016.D21
                       Y2017.WarmUp
                       Y2017.D01
                       Y2017.D02
                       Y2017.D03
  build-depends:       base >= 4.7 && < 5
                     , listsafe
                     , vector
                     , split
                     , semigroups
  default-language:    Haskell2010

test-suite adventofcode-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Y2016.D21Test
                       Y2017.WarmUpSpec
                       Y2017.D01Test
                       Y2017.D02Test
                       Y2017.D03Test
  main-is:             Spec.hs
  build-depends:       base
                     , adventofcode
                     , tasty
                     , tasty-hunit
                     , vector
                     , random
                     , random-shuffle
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/adventofcode
